# RustCI

./: .dockerignore  .env  .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  COMPILATION_STATUS.md  COMPILATION_STATUS_SUMMARY.md  CONFIGURATION_FIX_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS_SUMMARY.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DISTRIBUTED_RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  DOCKER_REGISTRY_SOLUTION.md  Dockerfile  FUTURE_WORK.md  INDUSTRY_TESTS_COMPLETE.md  KUBERNETES_DEPLOYMENT.md  LICENSE  MFA_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_VALIDATION_SUMMARY.md  PHASE_5_ERROR_CLASSIFICATION.md  PROJECT_STRUCTURE.md  README-STORAGE.md  README.md  REQUIREMENTS_VERIFICATION.md  RUSTCI_DEPLOYMENT_SOLUTION.md  SYSTEM_DESIGN.md  SYSTEM_INTEGRATION_SUMMARY.md  TASK_12_2_COMPLETION_SUMMARY.md  TASK_2_4_COMPLETION_SUMMARY.md  TASK_3_1_IMPLEMENTATION_STATUS.md  TASK_3_2_IMPLEMENTATION_STATUS.md  TASK_3_3_IMPLEMENTATION_STATUS.md  TASK_3_4_IMPLEMENTATION_STATUS.md  TASK_4_1_COMPLETION_SUMMARY.md  TASK_4_2_COMPLETION_SUMMARY.md  TASK_4_3_COMPLETION_SUMMARY.md  TASK_4_4_COMPLETION_SUMMARY.md  (+35 more)
benches/: cra_benchmarks.rs  critical_path_benchmarks.rs  fit_benchmarks.rs
benchmark-results/: latency-output.txt  system-info.txt  valkyrie-performance-validation-report.md
benchmarks/: .gitignore  Cargo.toml  README.md  valkyrie_benchmarks.rs
benchmarks/configs/: compatibility.yaml  default.yaml  performance.yaml  quick.yaml
benchmarks/scripts/: quick-benchmark.sh  run-all-benchmarks.sh  run-performance-validation.sh
benchmarks/src/: benchmark_orchestrator.rs  main.rs  metrics_collector.rs  perf_test.rs  regression_detector.rs  unified_benchmark_engine.rs
benchmarks/valkyrie/bridge/: benchmarks.rs
benchmarks/valkyrie/integration/: bridge_tests.rs  chaos_tests.rs  compatibility_tests.rs  fixtures.rs  mod.rs  performance_tests.rs  protocol_tests.rs  security_tests.rs  transport_tests.rs  utils.rs
benchmarks/valkyrie/protocol/: simple_performance_test.rs  valkyrie_standalone_performance_validation.rs
bindings/: c.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
config/: haproxy.cfg  prometheus.yml  valkyrie.yaml
deployment/: auto_scaling.rs  automation.rs  blue_green.rs  blue_green_manager.rs  circuit_breaker.rs  disaster_recovery.rs  graceful_degradation.rs  health_checker.rs  maintenance.rs  migrations.rs  mod.rs  observability.rs  resource_management.rs  traffic_router.rs  validation.rs
deployments/: QUICK_START.md  README.md
docs/: DOCUMENTATION_REORGANIZATION_PLAN.md  FINAL_VALKYRIE_PROTOCOL_SPEC.md  README.md  VALKYRIE_PROTOCOL.md  api-usage-guide.md  connector-system-guide.md  deployment-guide.md  distributed-rate-limiting.md  middleware-security.md
examples/: comprehensive_audit_logging_example.rs  connector-integration-examples.yaml  distributed_rate_limiting_example.rs  event_driven_test.rs  external_observability_example.rs  k8s-test-pipeline.yaml  observability_adapter_example.rs  observability_example.rs  performance_validation.rs  pipeline-examples.yaml  pluggable_observability_example.rs  qos_stream_management_example.rs  tiered_pipeline_validation.rs  valkyrie_api_example.rs  zero_trust_security_example.rs
industry-test-results/: industry_workload_report_20250812_221909.md
rust-examples/: README.md
scripts/: README.md  analyze-dependencies.sh  automated-pipeline-test.sh  cleanup-codebase.sh  deploy.sh  generate-openapi-docs.sh  get-admin-token.sh  industry-workload-tests.sh  measure-build-time.sh  migrate-config.sh  mongo-init.js  organize-benchmarks.sh  performance-comparison.sh  run-pipeline-test.sh  rustci-api.sh  setup-dind-environment.sh  setup-env.sh  simple-valkyrie-performance-test.sh  stopAndErase.sh  test-all-functionalities.sh  test-nodejs-deployment.sh  test-pipeline-execution.sh  test-rustci-deployment.sh  test-valkyrie-performance.sh  unified-deployment-test.sh  validate-pipeline-configs.sh  validate-rustci-deployment.sh  valkyrie-benchmark.sh  valkyrie-test.sh  valkyrie_perf_standalone  valkyrie_throughput_test  vps-ssh.sh
security-test-results-20250830-200305/: auth_summary.txt  auth_test_executions.json  auth_test_nodes.json  auth_test_openapi.json.json  auth_test_pipelines.json  auth_test_runners.json  security_test_report.md
src/: config.rs  database.rs  docs.rs  error.rs  integration_tests.rs  lib.rs  main.rs  service_registry.rs  token.rs  upload.rs  utils.rs
test-app/: Cargo.toml  Dockerfile  README.md
test-results-20250830-200432/: api_version_v1.json  api_version_v2.json  auto_scaling_config.json  blue_green_deployment.json  cache_stats.json  circuit_breaker_config.json  comprehensive_pipeline.json  comprehensive_test_report.md  config_status.json  database_health.json  error_handling_test.json  healing_metrics.json  healing_strategies.json  health_check.json  (+16 more)
valkyrie-performance-results-20250830-200357/: Cargo.toml  latency_results.txt  valkyrie_latency_test.rs  valkyrie_performance_report.md
valkyrie-protocol/: Cargo.toml
valkyrie-protocol/src/: client.rs  core.rs  error.rs  lib.rs  message.rs  security.rs  server.rs  transport.rs
valkyrie-protocol/src/core/: connection.rs  engine.rs  registry.rs
valkyrie-protocol/src/security/: authentication.rs  encryption.rs
valkyrie-protocol/src/transport/: quic.rs  tcp.rs  unix_socket.rs  websocket.rs
valkyrie-sdk/: Cargo.toml
valkyrie-sdk/javascript/: README.md  package.json
valkyrie-sdk/javascript/src/: client.ts  connection.ts  errors.ts  events.ts  index.ts  logger.ts  message.ts  retry.ts  server.ts
valkyrie-sdk/python/: README.md  requirements.txt  setup.py
valkyrie-sdk/python/src/valkyrie/: __init__.py  client.py  connection.py  errors.py  message.py  retry.py  server.py
valkyrie-sdk/python/src/valkyrie/cli/: __init__.py  client.py
valkyrie-sdk/src/: client.rs  config.rs  lib.rs  metrics.rs  pool.rs  retry.rs  server.rs
valkyrie-server/: Cargo.toml
valkyrie-server/src/: config.rs  handlers.rs  main.rs  signals.rs
valkyrie-tools/: Cargo.toml
valkyrie-tools/src/: benchmark.rs  client.rs  config.rs  debug.rs  main.rs
(+920 files in other folders)
