[package]
name = "RustAutoDevOps"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http1", "http2", "macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }

# Middleware + Layers
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# HTTP client – Rustls for TLS (musl-compatible)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Config and environment
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.4"
urlencoding = "2.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "serde"] }

# Auth
jsonwebtoken = "9.2"
argon2 = "0.5"
base64ct = "=1.7.3"

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Docker integration
bollard = "0.15"
tempfile = "3.8"
tar = "0.4" 

# Async support & logging
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Database – MongoDB using Tokio runtime with default rustls TLS support
mongodb = { version = "2.8", features = ["tokio-runtime"] }

# Streams & extras
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
axum-extra = { version = "0.9", features = ["cookie"] }

# Validation
regex = "1.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true