[package]
name = "RustAutoDevOps"
version = "0.1.0"
edition = "2021"
default-run = "RustAutoDevOps"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http1", "http2", "macros", "multipart"] }
tokio = { version = "1.45", features = ["full"] }

# Middleware + Layers
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# HTTP client – Rustls for TLS (musl-compatible)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Config and environment
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
urlencoding = "2.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["macros", "serde"] }

# Auth
jsonwebtoken = "9.2"
argon2 = "0.5"
base64ct = "1.7"

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Docker integration
bollard = "0.16"
tempfile = "3.20"
tar = "0.4"

# Kubernetes integration
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Async support & logging
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "json"] }

# Observability and metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
tracing-opentelemetry = "0.21"

# Performance and caching
moka = { version = "0.12", features = ["future"] }
dashmap = "5.5"

# Health checks and monitoring
sysinfo = "0.29"

# System utilities
hostname = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Database – MongoDB using Tokio runtime with default rustls TLS support
mongodb = { version = "2.8", features = ["tokio-runtime"] }

# Streams & extras
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
axum-extra = { version = "0.9", features = ["cookie"] }

# Validation
regex = "1.11"

# OpenAPI/Swagger documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

# Random number generation
fastrand = "2.3"

# CPU information
num_cpus = "1.17"

# File watching for hot-reload
notify = "6.1"

# WebSocket support for node communication
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
testcontainers = "0.16"

# Test utilities
proptest = "1.7"
quickcheck = "1.0"
quickcheck_macros = "1.1"

# HTTP testing
httpmock = "0.6"

# Additional test dependencies
md5 = "0.7"
tempdir = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true