[package]
name = "valkyrie_performance_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "valkyrie_latency_test"
path = "valkyrie_latency_test.rs"

[[bin]]
name = "valkyrie_throughput_test"
path = "valkyrie_throughput_test.rs"

[[bin]]
name = "batch_test"
path = "batch_test.rs"

[[bin]]
name = "memory_test"
path = "memory_test.rs"

[[bin]]
name = "throughput_test"
path = "throughput_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
