[package]
name = "valkyrie-protocol"
version = "0.1.0"
edition = "2021"
description = "High-performance message protocol for distributed systems"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustci/valkyrie-protocol"
keywords = ["protocol", "networking", "async", "performance", "distributed"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
quinn = "0.10"
rustls = "0.21"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"

# Performance
dashmap = "5.5"
crossbeam = "0.8"

# URL parsing
url = "2.4"

[features]
default = ["compression", "encryption"]
compression = []
encryption = []
metrics = []