[package]
name = "valkyrie-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for Valkyrie Protocol - High-performance distributed messaging"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustci/valkyrie-protocol"
keywords = ["sdk", "protocol", "networking", "async", "distributed"]
categories = ["network-programming", "api-bindings"]

[dependencies]
# Core protocol
valkyrie-protocol = { path = "../valkyrie-protocol", version = "0.1.0" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"

# Configuration
config = "0.13"
toml = "0.8"
serde_yaml = "0.9"

# Random for jitter
rand = "0.8"

[features]
default = ["client", "server"]
client = []
server = []
metrics = ["valkyrie-protocol/metrics"]