[package]
name = "valkyrie-server"
version = "0.1.0"
edition = "2021"
description = "Standalone Valkyrie Protocol Server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustci/valkyrie-protocol"
keywords = ["server", "protocol", "networking", "async", "distributed"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "valkyrie-server"
path = "src/main.rs"

[dependencies]
# Core components
valkyrie-protocol = { path = "../valkyrie-protocol", version = "0.1.0" }
valkyrie-sdk = { path = "../valkyrie-sdk", version = "0.1.0" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[features]
default = ["metrics"]
metrics = ["valkyrie-sdk/metrics"]